# amGHOST

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  amGHOST_Event.cpp  amGHOST_Event.hh  amGHOST_EventKonsument.hh  amGHOST_EventTypes.hh  amGHOST_System.cpp  amGHOST_System.hh  amGHOST_VkSurfaceKHR.hh  amGHOST_Window.hh  amGHOST_logWIN32.hh
.CMakeFiles/: REY_FetchV4.REY_LoggerNUtils.cmake  REY_FetchV4.cmake  REY_FetchV4.vulkan.cmake  REY_FetchV4_X.REY_LoggerNUtils.cmake  REY_FetchV4_X.vulkan.cmake  REY_FetchV4_X_RESET.cmake
.forge/: .gitignore
amE/: amE.hh
amGE/: amGE.hh
amTHREAD/: amTHREAD.hh  amT_prototype.hh
amVK/: README.md  amGHOST_SwapChainResizer.hh  amVK.cpp  amVK.hh  amVK_ColorSpace.hh  amVK_CommandBuffer.hh  amVK_Device.cpp  amVK_Device.hh  amVK_DeviceQCI.hh  amVK_FrameBuffer.hh  amVK_Image.hh  amVK_Instance.hh  amVK_InstanceProps.hh  amVK_Props.hh  amVK_RenderPass.hh  amVK_RenderPass_Descriptors.hh  amVK_Surface.hh  amVK_SurfacePresenter.hh  amVK_SwapChain.hh  amVK_log.hh  examples.md
amVK/MAN/: amVK_MAN_CP_Q.hh
amVK/common/: amVK.hh  amVK_ColorSpace.hh  amVK_GPU.hh  amVK_PipelineObjects.hh  amVK_RenderPass_Descriptors.hh  amVK_Synchronization.hh  amVK_SynchronizationPrototypes.hh
amVK/core/: amVK_CommandBufferPrimary.hh  amVK_CommandBufferSecondary.hh  amVK_CommandPool.hh  amVK_CommandPoolMAN.hh  amVK_Commands.cpp  amVK_Device.cpp  amVK_Device.hh  amVK_DeviceQCI.hh  amVK_DeviceQueues.hh  amVK_Instance.cpp  amVK_Instance.hh  amVK_InstanceProps.hh  amVK_InstancePropsEXPORT.hh  amVK_InstancePropsEXT.hh  amVK_PipelineGRAPHICS.cpp  amVK_PipelineGRAPHICS.hh  amVK_PipelineLayout.hh  amVK_RenderPass.cpp  amVK_RenderPass.hh  amVK_RenderPassCMDs.hh  amVK_RenderPassFBs.hh  amVK_Surface.cpp  amVK_Surface.hh  amVK_SwapChain.cpp  amVK_SwapChain.hh  amVK_SwapChainIMGs.hh
amVK/extras/: SCREENSHOT_STUDIO.hh  amVK_CommandBuffer.hh  amVK_FrameBuffer.hh  amVK_Image.hh  amVK_SemaPhore.hh
amVK/guide/: .gitignore  1.start.hh  1.start.md  2.docs.md  3.intro.md  4.guide.CH0.md  4.guide.CH0.vscode.md  4.guide.CH1.md  4.guide.CH10.md  4.guide.CH2.md  4.guide.CH3.md  4.guide.CH4.md  4.guide.CH5.md  4.guide.CH6.md  4.guide.CH7.md  4.guide.CH8.md  4.guide.CH9.md  4.guide.chapter1.hh  4.guide.html  4.guide.md  4.guide.vscode.md  4.guide_V1.obsidian.canvas  4.guide_V3_Fastest.obsidian.canvas  amVK_DocsClass1.less  extras.md  style-bkup.less
amVK/impl/: amVK_Device.cpp  amVK_Instance.cpp  amVK_InstanceProps.cpp  amVK_InstancePropsEXT.cpp  amVK_InstancePropsExport.cpp  amVK_InstancePropsExport_nlohmann.cpp  amVK_RenderPass.cpp  amVK_Surface.cpp  amVK_SurfacePresenter.cpp  amVK_SwapChain.cpp
amVK/intern/: amVK_CreateInfos.cpp  amVK_Device.cpp  amVK_Enum2String.cpp  amVK_Enum2String.hh  (+12 more)
intern/: amGHOST_SystemWIN32.WndProc.cpp  amGHOST_SystemWIN32.cpp  amGHOST_SystemWIN32.hh  amGHOST_SystemX11.hh  amGHOST_SystemXCB.hh  amGHOST_VkSurfaceKHR_WIN32.hh  amGHOST_WindowWIN32.cpp  amGHOST_WindowWIN32.hh
tests/: main1.cpp  main2.cpp
(+116 files in other folders)
